--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Gustavo Diaz">
-<meta name="dcterms.date" content="2026-01-28">
+<meta name="dcterms.date" content="2026-02-04">
 
 <title>POLI_SCI 490: Machine Learning in Political Science</title>
 <style>
@@ -65,7 +65,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">January 28, 2026</p>
+      <p class="date">February 4, 2026</p>
     </div>
   </div>
   
@@ -87,7 +87,7 @@ ul.task-list li input[type="checkbox"] {
 <p><a href="slides/week2.html">Week 2: Regression</a></p>
 <p><a href="slides/week3.html">Week 3: Classification</a></p>
 <p><a href="https://github.com/gustavo-diaz/ps490ml/blob/main/scripts/validation.qmd">Week 4: Validation, selection, regularization</a></p>
-<p>Week 5: Tree-based methods</p>
+<p><a href="slides/week5.html">Week 5: Tree-based methods</a></p>
 <p>Week 6: Neural networks</p>
 <p>Week 7: Ensemble learning</p>
 <p>Week 8: Unsupervised learning</p>
