--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Gustavo Diaz">
-<meta name="dcterms.date" content="2026-02-11">
+<meta name="dcterms.date" content="2026-02-18">
 
 <title>POLI_SCI 490: Machine Learning in Political Science</title>
 <style>
@@ -65,7 +65,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">February 11, 2026</p>
+      <p class="date">February 18, 2026</p>
     </div>
   </div>
   
@@ -89,7 +89,7 @@ ul.task-list li input[type="checkbox"] {
 <p><a href="https://github.com/gustavo-diaz/ps490ml/blob/main/scripts/validation.qmd">Week 4: Validation, selection, regularization</a></p>
 <p><a href="slides/week5.html">Week 5: Tree-based methods</a></p>
 <p><a href="slides/week6.html">Week 6: Neural networks</a></p>
-<p>Week 7: Ensemble learning</p>
+<p><a href="slides/week7.html">Week 7: Ensemble learning</a></p>
 <p>Week 8: Unsupervised learning</p>
 <p>Week 9: Inference</p>
 <p>Week 10: Extensions</p>
